[tool]
[tool.poetry]
name = "imouapi"
version = "1.0.15"
homepage = "https://github.com/user2684/imouapi"
description = "Library for controlling Imou devices by interacting with the Imou Life API."
authors = ["user2684 <user2684@users.noreply.github.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "imouapi" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
aiohttp = "^3.8.1"
black  = "^23.12.1"
isort  = "^5.13.2"
flake8  = "^6.1.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.8.0"
pytest  = "^7.4.3"
py  = "^1.11.0"
pytest-cov  = "^4.1.0"
tox  = "^4.11.4"
virtualenv  = { version = "^20.2.2", optional = true}
pip  = "^23.3.2"
twine  = "^4.0.2"
pre-commit = "^3.6.0"
toml = "^0.10.2"
bump2version = "^1.0.1"
mkdocstrings-python = "^1.7.5"
mkdocs = {version = "^1.3.1", optional = true}
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.5.3"
mkdocs-material-extensions = {version = "^1.0.3", optional = true}
mkdocs-autorefs = "^0.5.0"
aioresponses = "^0.7.3"
mypy-extensions = "^1.0.0"
pyproject-api = "^1.6.1"
snowballstemmer = "^2.2.0"
pydocstyle = "^6.3.0"
sqlalchemy = "^2.0.22"

[tool.poetry.extras]
test = [
    "pytest",
    "py",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "aioresponses"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

#[tool.poetry.scripts]
#imouapi = 'imouapi.cli:main'

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
